<resources>
    <string name="app_name">City Corpoaration</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">City Corporation</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_permission">Permission</string>
    <string name="menu_license">License</string>
    <string name="menu_renewlicense">Renew License</string>
    <string name="menu_complaints">Complaints</string>
    <string name="menu_updatePassword">Update Password</string>
</resources>