<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/homeicon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_permission"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_permission" />
        <item
            android:id="@+id/nav_license"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_license" />
        <item
            android:id="@+id/nav_renewlicense"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_renewlicense" />
        <item
            android:id="@+id/nav_complaints"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_complaints" />
        <item
            android:id="@+id/nav_updatePassword"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_updatePassword" />
    </group>
</menu>